Update Jenkinsfile to change Docker image credentials and improve logging messages

--- a/Docker/Jenkinsfile
+++ b/Docker/Jenkinsfile
@@ -2,8 +2,8 @@ pipeline {
     agent any
 
     environment {
-        DOCKER_DIR = "./Docker"
-        DOCKER_IMAGE = "your-dockerhub-username/sample-web-app"
+        DOCKER_DIR = "Docker"
+        DOCKER_IMAGE = "kameshwaranm/sample-web-app"
         DOCKER_TAG = "latest"
     }
 
@@ -20,7 +20,7 @@ pipeline {
             steps {
                 script {
                     dir("${DOCKER_DIR}") {
-                        sh "ls -la" 
+                        sh "ls -la"  // Debugging: List files in Docker directory
                     }
                 }
             }
@@ -38,9 +38,9 @@ pipeline {
 
         stage('Login to Docker Hub') {
             steps {
-                withCredentials([string(credentialsId: 'docker-hub-password', variable: 'DOCKER_PASS')]) {
+                withCredentials([usernamePassword(credentialsId: 'docker-hub-creds', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
                     script {
-                        sh "echo ${DOCKER_PASS} | docker login -u your-dockerhub-username --password-stdin"
+                        sh "echo ${DOCKER_PASS} | docker login -u ${DOCKER_USER} --password-stdin"
                     }
                 }
             }
@@ -65,10 +65,10 @@ pipeline {
 
     post {
         success {
-            echo 'Docker image built and pushed to Docker Hub successfully!'
+            echo '✅ Docker image built and pushed to Docker Hub successfully!'
         }
         failure {
-            echo 'Build failed! Check the logs.'
+            echo '❌ Build failed! Check logs for details.'
         }
     }
 }
