--- a/Docker/Jenkinsfile
+++ b/Docker/Jenkinsfile
@@ -8,6 +8,14 @@ pipeline {
     }
 
     stages {
+        stage('Clean Workspace') {
+            steps {
+                script {
+                    deleteDir()
+                }
+            }
+        }
+
         stage('Checkout Code') {
             steps {
                 script {
@@ -30,7 +38,10 @@ pipeline {
             steps {
                 script {
                     dir("${DOCKER_DIR}") {
-                        sh "docker build -t ${DOCKER_IMAGE}:${DOCKER_TAG} ."
+                        sh """
+                        echo "Building Docker image..."
+                        docker build -t ${DOCKER_IMAGE}:${DOCKER_TAG} .
+                        """
                     }
                 }
             }
@@ -40,7 +51,10 @@ pipeline {
             steps {
                 withCredentials([usernamePassword(credentialsId: 'docker-hub-creds', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
                     script {
-                        sh "echo ${DOCKER_PASS} | docker login -u ${DOCKER_USER} --password-stdin"
+                        sh """
+                        echo "Logging into Docker Hub..."
+                        echo ${DOCKER_PASS} | docker login -u ${DOCKER_USER} --password-stdin
+                        """
                     }
                 }
             }
@@ -49,7 +63,10 @@ pipeline {
         stage('Push Image to Docker Hub') {
             steps {
                 script {
-                    sh "docker push ${DOCKER_IMAGE}:${DOCKER_TAG}"
+                    sh """
+                    echo "Pushing Docker image to Hub..."
+                    docker push ${DOCKER_IMAGE}:${DOCKER_TAG}
+                    """
                 }
             }
         }
@@ -57,7 +74,10 @@ pipeline {
         stage('Cleanup') {
             steps {
                 script {
-                    sh "docker rmi ${DOCKER_IMAGE}:${DOCKER_TAG}"
+                    sh """
+                    echo "Removing local Docker image..."
+                    docker rmi ${DOCKER_IMAGE}:${DOCKER_TAG} || true
+                    """
                 }
             }
         }
