Add debug steps to Terraform Init stage to display current directory and list files

--- a/task3/Jenkinsfile
+++ b/task3/Jenkinsfile
@@ -25,7 +25,8 @@ pipeline {
         }
         stage('Terraform Init') {
             steps {
-                sh 'ls'
+                sh 'pwd'
+                sh 'ls -lah'
                 sh 'terraform init'
             }
         }
