Update Terraform Plan stage to reference tfvars file in task3 directory

--- a/task3/Jenkinsfile
+++ b/task3/Jenkinsfile
@@ -33,7 +33,7 @@ pipeline {
         stage('Terraform Plan') {
             steps {
                 sh "ls"
-                sh "terraform plan -out=tfplan -var-file=${env.ENVIRONMENT}.tfvars"
+                sh "terraform plan -out=tfplan -var-file=task3/${env.ENVIRONMENT}.tfvars"
             }
         }
         stage('Approval Before Apply') {
